--- a/cgi-bin/core/style.css
+++ b/cgi-bin/core/style.css
@@ -115,3 +115,20 @@ display: none;
 .modal-footer-colour {
   background-color: #eafaea;
 }
+
+.warning_core {
+    padding: 20px;
+    background-color: #d62a1d;
+    color: white;
+    opacity: 100%;
+    transition: 1s ease-in-out;
+    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-right: 2%;
+}
+
+.warning_core_nope {
+    opacity: 0;
+    height: 0px;
+    transition: 1s ease;
+}
